--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dropzone": "^14.2.3",
     "react-loading-skeleton": "^3.3.1",
     "react-pdf": "^7.6.0",
+    "sharp": "^0.33.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.1.0",
