--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@kinde-oss/kinde-auth-nextjs": "^1.8.22",
     "@prisma/client": "^5.7.0",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -20,6 +21,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-pdf/renderer": "^3.1.17",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-table": "^8.11.0",
@@ -36,9 +38,12 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.49.3",
     "react-loading-skeleton": "^3.3.1",
     "react-pdf": "^7.6.0",
+    "react-resize-detector": "^10.0.1",
     "sharp": "^0.33.1",
+    "simplebar-react": "^3.2.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.1.0",
