--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-textarea-autosize": "^8.5.3",
     "sharp": "^0.33.1",
     "simplebar-react": "^3.2.4",
+    "stripe": "^14.12.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.1.0",
