--- a/package.json
+++ b/package.json
@@ -40,14 +40,18 @@
     "@trpc/server": "^10.44.1",
     "@uploadthing/react": "^6.0.2",
     "ai": "^2.2.31",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "jose": "^5.2.2",
+    "jsonwebtoken": "^9.0.2",
     "langchain": "^0.1.3",
     "lucide-react": "^0.284.0",
     "next": "13.5.4",
     "next-themes": "^0.2.1",
     "openai": "^4.24.7",
+    "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
@@ -68,6 +72,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
